src/test/ui/generator/unresolved_type_param.stderr
error[E0698]: type inside generator must be known in this context
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type for `T`
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0698`.
